# InfinityLoop

./: .gitignore  1.index.js  1.js  Cargo.toml  README.md  build.rs  index.html  index.js  package.json
.github/workflows/: build.yml
js/: index.js
src/: angle.rs  animations.rs  app.rs  camera.rs  events.rs  game.rs  lib.rs  main.rs  meshes.rs  shader.rs  util.rs  world.rs  world_old.rs
src/_old/: animations.rs  app.rs  intersection.rs  lib.rs  meshes.rs  world_old.rs
src/font/: arial.arfont
src/opengl/: buffer.rs  enums.rs  error.rs  framebuffer.rs  mod.rs  shader.rs  texture.rs  vertex_array.rs
src/opengl/texture/: enums.rs  mod.rs  util.rs
src/platform/: glutin.rs  wasm.rs
src/renderer/: game.rs  mod.rs  shared.rs  text.rs  world.rs
src/shader/: fragment.glsl  postprocess.frag  postprocess.vert  postprocess_ending.frag  postprocess_standard.frag  postprocess_transition.frag  pp_fragment.glsl  text.frag  text.vert  tiles.frag  tiles.vert  vertex.glsl
src/types/: angle.rs  color.rs  hex.rs  mod.rs
src/world/: generator.rs  map.rs  mod.rs  tiles.rs  world.rs
static/: index.html
