# You must change these to your own details.
[package]
name = "infinity_loop"
description = "The Infinity Loop game as web app"
version = "0.1.0"
authors = ["sidit77 <sidit77@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[profile.release]
lto = true

[build-dependencies]
glam = "0.20"
anyhow = "1.0.40"

[dependencies]
log = "0.4"
winit = "0.26"
glow = "0.11"
instant = "0.1"
bytemuck = "1.7"
glam = "0.20"
fastrand = "1.5"
smallbitset = "0.3.0"
lazy_static = "1.4"
enum-iterator = "0.7"
miniserde = "0.1"
priority-queue = "1.2"
png = "0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_log = "0.2"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.28"
env_logger = "0.9"