# You must change these to your own details.
[package]
name = "infinity_loop"
description = "The Infinity Loop game as cross-platform app"
version = "0.1.0"
authors = ["sidit77 <sidit77@gmail.com>"]
readme = "README.md"
edition = "2021"

[profile.release]
lto = true

[workspace]
members = [
    "platforms/desktop",
    "platforms/wasm",
    "platforms/android"
]
default-members = ["platforms/desktop"]

[dependencies]
log = "0.4"
winit = "0.26"
glow = "0.11"
instant = "0.1"
bytemuck = { version = "1.7", features = ["derive"] }
glam = { version = "0.20", features = ["bytemuck"]}
fastrand = "1.5"
smallbitset = "0.3.0"
lazy_static = "1.4"
enum-iterator = "0.7"
miniserde = "0.1"
priority-queue = "1.2"
sdf2d = {git = "https://github.com/sidit77/sdf2d.git"}
