# You must change these to your own details.
[package]
name = "infinity_loop"
description = "The Infinity Loop game as cross-platform app"
version = "0.1.0"
authors = ["sidit77 <sidit77@gmail.com>"]
readme = "README.md"
edition = "2021"

[profile.release]
lto = true

[workspace]
members = [
    "platforms/desktop",
    "platforms/wasm",
    "platforms/android"
]
default-members = ["platforms/desktop"]

[dependencies]
anyhow = "1.0"
log = "0.4"
glow = "0.12"
instant = { version = "0.1", features = ["wasm-bindgen"] }
bytemuck = { version = "1.7", features = ["derive"] }
glam = { version = "0.21", features = ["bytemuck", "serde"]}
fastrand = "1.5"
smallbitset = "0.3.0"
lazy_static = "1.4"
enum-iterator = "1.1"
priority-queue = "1.2"
hashbrown = "0.13"
sdf2d = {git = "https://github.com/sidit77/sdf2d.git"}
artery-font = {version = "1.0", features = ["png"]}
serde = "1.0"
serde_json = "1.0"
